# turtlebot4-praktikum

./: .gitignore  README.md
docs/: 00_setup.md  01_ros2_grundlagen.md  02_slam.md  03_navigation.md  cheatsheet.md  troubleshooting.md
maps/: README.md
src/praktikum_bringup/: CMakeLists.txt  package.xml
src/praktikum_bringup/config/: params.yaml
src/praktikum_bringup/launch/: bringup.launch.py
src/praktikum_py/: package.xml  setup.cfg  setup.py
src/praktikum_py/launch/: demo.launch.py
src/praktikum_py/praktikum_py/: battery_listener.py  goto_goal.py  hello_node.py  square_driver.py
