<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>praktikum_bringup</name>
  <version>0.1.0</version>
  <description>Launch- und Konfigurationsdateien für das Mobile Robotik Praktikum (TurtleBot 4)</description>
  <maintainer email="mobile-robotik@th-luebeck.de">Praktikum Mobile Systeme</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>praktikum_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
